# gapminder-ai

./: .gitignore  .pre-commit-config.yaml  README.md
automation-api/: .env.example  .rules  DEV.md  README.md  generate_experiment.py  litellm_config.yaml  mypy.ini  pyproject.toml
automation-api/backlogs/: folder-naming-standardization.md  gm-eval-mode-updates.md  gm-eval-skip-existing-responses.md  improve-ux.md
automation-api/lib/: authorized_clients.py  config.py
automation-api/lib/ai_eval_spreadsheet/: schemas.py  wrapper.py
automation-api/lib/gdrive/: auth.py
automation-api/lib/gs_ai_eval_spreadsheet/: schemas.py
automation-api/lib/gsheets/: gsheets_utils.py  gsheets_worksheet_data.py  gsheets_worksheet_editor.py
automation-api/lib/hash/: fnv64hash.py
automation-api/lib/llm/: alibaba_batch_api.py  anthropic_batch_api.py  openai_batch_api.py  vertex_batch_api.py
automation-api/lib/llms/: alibaba.py  fake.py  openai.py  spark.py  utils.py
automation-api/lib/llms/iflytek/: __init__.py  spark_api.py
automation-api/lib/pilot/: cli.py  datatypes.py  generate_eval_prompts.py  generate_experiment.py  generate_prompts.py  helpers.py  send_batch_prompt.py  send_batch_prompt_alibaba.py  send_batch_prompt_anthropic.py  send_batch_prompt_litellm.py  send_batch_prompt_openai.py  send_batch_prompt_vertex.py  summarize_results.py  utils.py
automation-api/lib/pilot/batchjob/: __init__.py  anthropic.py  base.py  litellm.py  mistral.py  openai.py  utils.py  vertex.py
automation-api/lib/pilot/gm_eval/: __init__.py  cli.py  utils.py
automation-api/lib/pilot/gm_eval/commands/: __init__.py  download.py  evaluate.py  generate.py  merge.py  run.py  send.py  send_file.py  split.py  summarize.py
automation-api/notebooks/: exploration-notebook.py  run_evaluation.py
automation-api/tests/gdrive/: test_auth.py
automation-api/tests/gs_ai_eval_spreadsheet/: test_schemas.py
automation-api/tests/gsheets/: test_gsheets_worksheet_data.py  test_gsheets_worksheet_editor.py
automation-api/tests/pilot/: test_gm_eval_model_transform.py  test_summarize_results.py
automation-api/tests/pilot/batchjob/: test_utils.py
automation-api/tests/pilot/data/example_batch/: mc039-question_prompts-response-eval-prompts-claude-3-5-response.jsonl  mc039-question_prompts-response-eval-prompts-gimini-1-5-response.jsonl  mc039-question_prompts-response-eval-prompts-gpt-4o-response.jsonl  mc039-question_prompts-response.jsonl  mc040-question_prompts-response-eval-prompts-claude-3-5-response.jsonl  mc040-question_prompts-response-eval-prompts-gimini-1-5-response.jsonl  mc040-question_prompts-response-eval-prompts-gpt-4o-response.jsonl  mc040-question_prompts-response.jsonl  test_cases.csv
automation-api/yival_experiments/: README.md  experiment_defaults.yaml  experiment_example.yaml  experiment_latest.yaml
automation-api/yival_experiments/custom_configuration/: claude_evaluator.py  claude_evaluator_config.py  evaluator_common.py  example_evaluator_data.py  gpt4_evaluator.py  gpt4_evaluator_config.py  llama3_evaluator.py  llama3_evaluator_config.py  model_compare.py  model_config_variation_generator.py  model_config_variation_generator_config.py  model_config_wrapper.py  model_config_wrapper_config.py  question_reader.py  question_reader_config.py  simple_evaluator.py  simple_evaluator_config.py  vertex_ai_evaluator.py  vertex_ai_evaluator_config.py
automation-api/yival_experiments/custom_configuration/llms/: alibaba_complete.py  palm_completion.py
automation-api/yival_experiments/data/: questions_cn.csv  questions_en-US.csv  questions_zh-CN.csv
automation-api/yival_experiments/experiment_archive/: experiment_20231104_cn.yaml  experiment_20231104_en.yaml
automation-api/yival_experiments/experiment_configurations/: experiment_20231104_en.yaml  experiment_202401292237_en-US.yaml  experiment_202402011555_gpt-4-0613_en-US.yaml  experiment_202403291135_gpt-4-0125-preview_en-US.yaml  experiment_202403291248_gemini_gemini-1-0-pro_en-US.yaml  experiment_202404051719_gpt-4-0125-preview_en-US.yaml  experiment_202404102325_qwen-max-1201_zh-CN.yaml  experiment_202405162244_qwen-max-0403_zh-CN.yaml  experiment_202405162248_qwen-max-0403_zh-CN.yaml  experiment_202405281300_replicate_meta_meta-llama-3-70b-instruct_en-US.yaml  experiment_202408291204_gpt-4o-2024-08-06_en-US.yaml  experiment_202409102304_fireworks_ai_accounts_fireworks_models_llama-v3p1-405b-instruct_en-US.yaml  experiment_202412052345_fireworks_ai_accounts_fireworks_models_llama-v3p1-405b-instruct_en-US.yaml  experiment_202412052345_gpt-4o-2024-08-06_en-US.yaml
automation-api/yival_experiments/notebooks/: compare_evaluators.py  final_scores.py  human_rating.py  result_data_analysis.py  upload_to_ai_eval_sheet.py
automation-api/yival_experiments/output/: correct_rate_with_indecisive.csv  correct_rate_with_indecisive_by_prompt.csv  correct_rate_with_indecisive_prompt.csv  correct_rate_without_indecisive.csv  correct_rate_without_indecisive_by_prompt.csv  correct_rate_without_indecisive_prompt.csv  experiment_20231104_llama_1_0.pkl  experiment_202402012248_zh-CN_0.pkl  experiment_202404102325_qwen-max-1201_zh-CN_0.pkl  response_rate.csv  response_rate_prompt.csv  result_comb.csv  result_comb_prompt.csv  results.xlsx
automation-api/yival_experiments/output/20241205/: experiment_202412052345_vertex_ai_claude-3-5-sonnet@20240620_en-US_0.pkl  results.xlsx
automation-api/yival_experiments/output/archives/20231104/: correct_rate_with_indecisive.csv  correct_rate_with_indecisive_prompt.csv  correct_rate_without_indecisive.csv  correct_rate_without_indecisive_prompt.csv  experiment_20231104_gpt35_temp1_0.pkl  experiment_20231104_llama_2_0.pkl  llama_3_0.pkl  response_rate.csv  response_rate_prompt.csv  result_comb.csv
automation-api/yival_experiments/output/archives/20240516/: results.xlsx  (+3 more)
automation-api/yival_experiments/output/report_tables/: 1_number_of_average_answers.csv  2_average_rates.csv  3_correct_rate_by_prompt.csv
automation-api/yival_experiments/scripts/: fetch_questions.py  generate_experiment_config.py  generate_result.py
(+228 files in other folders)
